# h0mew0rk

./: .gitignore  README.md
C#/: README.md
C#/lesson1/: README.md
C#/lesson1/task2/: Program.cs
C#/lesson3/: README.md
C#/lesson4/: README.md
C#/lesson5/: README.md
C#/lesson6/: README.md
C#/lesson7/: README.md
C#/lesson8/: README.md
C#/lesson9/: README.md
Cpp/: README.md
Cpp/Массивы и Указатели в C++/: README.md
Cpp/Основы программирования на C++/: README.md
Cpp/Продвинутые темы и техники C++/: README.md
Cpp/Продвинутые темы и техники C++/Урок11/Задача1/src/: CMakeLists.txt  Counting.cpp  Dancing.cpp  Dog.cpp  Swimming.cpp  Talent.cpp  main.cpp
Cpp/Продвинутые темы и техники C++/Урок12/Задание1/: CMakeLists.txt  README.md
Cpp/Продвинутые темы и техники C++/Урок12/Задание1/src/: CMakeLists.txt  main.cpp
Cpp/Продвинутые темы и техники C++/Урок7/Задание2/src/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  main.cpp  ram.cpp
Cpp/Разработка веб-приложения на С++/: README.md
Cpp/Разработка веб-приложения на С++/Урок1/Задача/src/: CMakeLists.txt  Computer.cpp  GameOfMatches.cpp  Player.cpp
Cpp/Разработка веб-приложения на С++/Урок2/Задача/src/: CMakeLists.txt  Human.cpp  main.cpp
Cpp/Разработка веб-приложения на С++/Урок3/Задача/: CMakeLists.txt  README.md
Cpp/Разработка веб-приложения на С++/Урок3/Задача/client/: CMakeLists.txt  board.h  client.cpp  consolegame.cpp  consolegame.h  consoleplayer.cpp  consoleplayer.h  game.h  gamemanager.cpp  gamemanager.h  player.h  simpleboard.cpp  simpleboard.h
Java/: README.md  students_ex3_les2.json
Linux/: README.md
Linux/Lesson1/: README.md  h0mew0rk1.txt
Linux/Lesson2/: README.md  h0mew0rk2.txt
Linux/Lesson3/: README.md  h0mew0rk3.txt
Linux/Lesson4/: README.md  h0mew0rk4.txt
Linux/Lesson5/: README.md  h0mew0rk5.txt
Linux/Lesson6/: README.md  h0mew0rk.txt
Linux/Lesson7/: README.md  h0mew0rk7.txt
Linux/Lesson8/: README.md  h0mew0rk8.sh
OOP/: README.md
Python/: README.md
Python/lesson10/: README.md
Python/lesson2/: README.md
Python/lesson3/: README.md
Python/lesson5/: README.md
Python/Погружение в Python (семинары)/: README.md
Алгоритмы и структуры данных/: README.md
Алгоритмы и структуры данных/lesson2/: Program.java  README.md
Алгоритмы и структуры данных/lesson3/: Program3.java  README.md
Алгоритмы и структуры данных/lesson4/: Program4.java  README.md
Базы данных и SQL/: README.md
Базы данных и SQL/Урок1/: README.md
Базы данных и SQL/Урок2/: README.md
Базы данных и SQL/Урок3/: README.md
Базы данных и SQL/Урок4/: README.md
Базы данных и SQL/Урок5/: README.md
Базы данных и SQL/Урок6/: README.md
Веб-вёрстка/: README.md  index.html
Веб-вёрстка/public/: README.md  index.html  style.css
Веб-вёрстка/web/: README.md  index.html  style.css
Веб-вёрстка/www/: README.md  index.html  script.js  style.css
Знакомство с базами данных/: README.md
Знакомство с базами данных/Урок1/: README.md
Знакомство с базами данных/Урок2/: README.md  backup_tables_lesson2.sql  Дополнительное задание. Что будет результатом выборки (для самопроверки).txt  Как восстановить таблицы к уроку 2.txt  Как установить MariaDB.txt  Чему будет равна выборка (для самопроверки).txt  Что будет результатом следующих JOINов (для самопроверки).txt
Знакомство с базами данных/Урок3/: README.md  База данных для школьного кабинета.drawio
Знакомство с веб-технологиями/: README.md
Знакомство с веб-технологиями/Урок1/: README.md
Исключения в программировании и их обработка/: README.md
Компьютерные сети/: README.md
Контейнеризация/: README.md
Основы информационной безопасности. Обучение в записи/: README.md
Парадигмы программирования и языки парадигм (семинары в записи)/: README.md
(+679 files in other folders)
